--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,7 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
-AsteroidsForGame.vcxproj
-AsteroidsForGame.vcxproj.filters
+#AsteroidsForGame.vcxproj
+#AsteroidsForGame.vcxproj.filters
 *.vcxproj
-AsteroidsForGame.vcxproj.filters
+#AsteroidsForGame.vcxproj.filters
